--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+.terraform.lock.hcl
+
+awsconnection.sh
+
+#keys
+kul_private.ppk
+kul-labs.pem
